--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^7.2.0",
     "node": "^20.2.0",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
