--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/cprakash1/Unusable2Usable#readme",
   "dependencies": {
+    "cloudinary": "^1.37.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "node": "^20.2.0",
     "nodemon": "^2.0.22",
     "passport-local-mongoose": "^8.0.0",
