--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
-  "name": "unusable2usable",
+  "name": "Unusable2Usable",
   "version": "1.0.0",
-  "description": "This is to sell the unuasable items and buy usable items at lower cost",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cprakash1/Unusable2Usable.git"
-  },
-  "author": "Chandra Prakash",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cprakash1/Unusable2Usable/issues"
-  },
-  "homepage": "https://github.com/cprakash1/Unusable2Usable#readme",
   "dependencies": {
-    "cloudinary": "^1.37.0",
+    "@mapbox/mapbox-sdk": "^0.15.0",
+    "cloudinary": "^1.36.4",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
+    "install": "^0.13.0",
+    "joi": "^17.7.0",
     "method-override": "^3.0.0",
-    "mongoose": "^7.2.0",
+    "mongoose": "^6.8.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "node": "^20.2.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^2.0.20",
+    "npm": "^9.6.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sanitize-html": "^2.10.0"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.9.0"
   }
 }
