--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "npm": "^9.6.4",
     "passport": "^0.6.0",
