--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
